# Linux-Client

./: CMakeLists.txt  README.md  run.sh
cmake/modules/: FindWiringPi.cmake
install/intel_edison/: install.sh
install/raspberry/: install.sh
os/intel_edison/: install.sh  thinger.service
os/raspberry/: install.sh  thinger
src/: main.cpp  thinger  thinger.h  thinger_client.h  thinger_tls_client.h
src/thinger/: thinger.h  thinger_client.h  thinger_tls_client.h
src/thinger/core/: thinger_decoder.hpp  thinger_encoder.hpp  thinger_io.hpp  thinger_message.hpp
